# whereto

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  history.rst  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/notes/: 410-rules-9db72f7f10961d9b.yaml  cycle-detection-dff48a3706f459d8.yaml  drop-python-2-7-73d3113c69d724d6.yaml  group-subst-16dce373ccd24118.yaml  initial-release-fb76266f11e1d528.yaml  max-hops-1e9fa3c27d7406db.yaml  pcre-9c6e76b391620545.yaml  pcre2-a2f26cfb11f2cf97.yaml
releasenotes/source/: conf.py  index.rst
whereto/: __init__.py  app.py  parser.py  rules.py
whereto/tests/: test_app.py  test_parser.py  test_rules.py  test_whereto.py
