[metadata]
name = whereto
summary = Test Apache redirect rules.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/whereto/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    whereto

[entry_points]
console_scripts =
    whereto = whereto.app:main

[compile_catalog]
directory = whereto/locale
domain = whereto

[update_catalog]
domain = whereto
output_dir = whereto/locale
input_file = whereto/locale/whereto.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = whereto/locale/whereto.pot
